# scoff

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tests.sh
examples/StateMachine/: README.md  gen_classes.py  scoff  sm_check.py  sm_visit.py
examples/StateMachine/assets/: err1.sm  err2.sm
examples/StateMachine/sm/: __init__.py  state_machine.tx
parsers/: includes.py  syntax.py
scoff/: __init__.py
scoff/ast/: __init__.py  util.py
scoff/ast/passes/: __init__.py  astcopy.py  insert.py  remove.py
scoff/ast/visits/: __init__.py  control.py  exclusive.py  objects.py  scope.py  syntax.py
scoff/base/: __init__.py  grammar.py
scoff/codegen/: __init__.py
scoff/errors/: __init__.py
scoff/includes/: __init__.py  dependency.py
scoff/misc/: __init__.py  textx.py
scoff/parsers/: __init__.py  dependency.py  errors.py  generic.py  includes.py  linematch.py  syntax.py  token.py  tree.py
scoff/passes/: astcopy.py  insert.py  remove.py
tests/: parser_tests.py
