[tool.poetry]
name = "scoff"
version = "0.1.0"
description = "Simple COmpiler Framework"
authors = ["Bruno Morais <brunosmmm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
textx = "^2.3.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
