[tool.poetry]
name = "scoff"
version = "0.1.0"
description = "Simple COmpiler Framework"
authors = ["Bruno Morais <brunosmmm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
textx = "^3.1.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
black = "^24.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
