[tool.poetry]
name = "scoff"
version = "0.1.0"
description = "Simple COmpiler Framework"
authors = ["Bruno Morais <brunosmmm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
textx = "^4.2.2"

[tool.poetry.group.dev.dependencies]
coverage = "^5.5"
black = "^25.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
